# MCA

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeCache.txt  CMakeLists.txt  Makefile  __rlc_config.hpp  cmake_install.cmake  debug_1.cpp  draw_circles.cpp  draw_used_area.cpp  main  main.cpp  main_backward.cpp  main_forward.cpp  main_postproc.cpp  main_preproc.cpp  postprocess.cpp  preprocess.cpp  process.cpp
cmake/: dependencies.cmake  helper.cmake  options.cmake
compare/: package.json
data/: GetFirstFrameFromYuv.sh
include/LVC/common/: cmake.h  cmake.h.in  config.hpp  config_parser.h  const.hpp  defines.h  helper.hpp
include/LVC/config/: config.h  parser.h
include/LVC/preprocess/: backward.h  debug.h  debug.hpp  forward.h  helper.hpp  helper_v1.hpp  helper_v2.hpp
include/MCA/common/: defines.h
include/MCA/config/: config.h  parser.h
include/MCA/process/: debug.h  helper.hpp  postproc.h  preproc.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  helper.cmake
src/common/: config.cpp  config_parser.cpp  config_reader.cpp
src/config/: config.cpp  parser.cpp
src/include/: mca.hpp
src/include/mca/: cli.hpp  config.h  config.hpp  debug.hpp  helper.hpp  impl.hpp  proc.hpp
src/include/mca/common/: cmake.h  cmake.h.in  config.h.in  const.h  defines.h  info.hpp
src/include/mca/config/: config.h
src/include/mca/impl/: debug.hpp  helper.hpp  postproc.hpp  preproc.hpp
src/include/mca/proc/: helper.hpp  postproc.hpp  preproc.hpp
src/include/mca/process/: debug.h  helper.hpp  postproc.h  preproc.h
src/lib/: CMakeLists.txt  config.cpp  lib.cpp
src/lib/config/: config.cpp  parser.cpp
src/lib/process/: debug.cpp  postproc.cpp  preproc.cpp
src/preprocess/: backward.cpp  backward_v1.cc  backward_v2.cc  debug.cpp  forward.cpp  forward_v1.cc  forward_v2.cc
src/process/: debug.cpp  postproc.cpp  preproc.cpp
tests/: CMakeLists.txt  test_config.cpp
